# MasterThesis

./: LTLBootCamp.ipynb  tree_paths.txt
minimax/: pyproject.toml
minimax/minimax-backup/minimax-backup/src/minimax/: arguments.py
minimax/minimax-backup/minimax-backup/src/minimax/envs/: batch_env.py
minimax/minimax-backup/minimax-backup/src/minimax/envs/ltl_env/: __init__.py  progress.py
minimax/minimax-backup/minimax-backup/src/minimax/models/: registration.py
minimax/minimax-backup/minimax-backup/src/minimax/runners/: xp_runner.py
minimax/minimax-backup/src/minimax/config/: xpid_maker.py
minimax/minimax-backup/src/minimax/config/configs/letter_env/: dr.json
minimax/minimax-backup/src/minimax/envs/ltl_env/: utils.py
minimax/minimax-backup/src/minimax_lib_ltl.egg-info/: PKG-INFO  SOURCES.txt
minimax/src/minimax/envs/: environment.py
minimax/src/minimax/envs/ltl_env/: ast.py  letter_env.py  letter_env_wrap.py  sampler.py  utils.py
minimax/src/minimax/models/: __init__.py
minimax/src/minimax/models/ltlenv/: __init__.py  letterworld_model.py
minimax/src/minimax/runners/: dr_runner.py
sampling-for-learnability/: .bash_history  =4.66.0  Dockerfile  Dockerfile_cpu  Dockerfile_gpu  Dockerfile_my_gpu  Dockerfile_v2  Makefile  Makefile_cpu  Makefile_gpu  check_eventually.py  check_progress.py  check_until.py  eventually_sampling.py  ltlbootcamp.py  run_docker.sh  sampler.txt  test_ast_eventually.py  test_ast_until.py  until_conjuncts.py  until_sampling.py  until_task.py
sampling-for-learnability/sfl/train/: la.txt  ltl_plr.py  ltl_sfl.py  (+2 more)
(+22 files in other folders)
