[project]
name = "minimax-lib_ltl"
version = "0.2.0"
authors = [
  {name="Minqi Jiang"}, 
  {email="msj@meta.com"},
]
description = "Efficient baselines for autocurricula in JAX"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]


[tool.hatchling.scripts]
train = "minimax.train:main"
evaluate = "minimax.evaluate:main"
make_cmd = "minimax.config.make_cmd:main"

[tool.setuptools.package-data]
"minimax.config.configs" = ["**"]